[gd_scene load_steps=4 format=3 uid="uid://ptkseutwb6ke"]

[ext_resource type="Texture2D" uid="uid://c5ygwwai8r27v" path="res://assets/bitmaps/ui/bubble_9patch.png" id="1_fwq6s"]
[ext_resource type="Script" path="res://UI/dialogue.gd" id="1_jww1s"]
[ext_resource type="Texture2D" uid="uid://d117yhbmf8o0f" path="res://assets/bitmaps/ui/textfield_9patch.png" id="2_wb1ks"]

[node name="Dialogue" type="Control" node_paths=PackedStringArray("llm_output", "llm_input")]
layout_mode = 3
anchors_preset = 0
offset_right = 217.0
offset_bottom = 187.0
script = ExtResource("1_jww1s")
llm_output = NodePath("NinePatchAnswer/llm_output")
llm_input = NodePath("NinePatchQuestion/llm_input")

[node name="NinePatchAnswer" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = 971.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fwq6s")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="llm_output" type="Label" parent="NinePatchAnswer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 15.0
offset_right = -17.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 1

[node name="NinePatchQuestion" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(1100, 80)
layout_mode = 1
offset_left = 8.0
offset_top = 127.0
offset_right = 1088.15
offset_bottom = 207.0
texture = ExtResource("2_wb1ks")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="llm_input" type="TextEdit" parent="NinePatchQuestion"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00689655
anchor_right = 0.993966
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 10.0
offset_right = -9.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="NinePatchQuestion"]
layout_mode = 0
offset_left = 1112.0
offset_top = 10.0
offset_right = 1176.0
offset_bottom = 74.0
text = "Send"

[connection signal="pressed" from="NinePatchQuestion/Button" to="." method="_on_button_pressed"]
